--- a/index.html
+++ b/index.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Spirit Animal/Name Backwards</title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css'>
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/jquery-ui-bootstrap/0.5pre/assets/css/bootstrap.min.css'><link rel="stylesheet" href="styles/style.css">
-
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/jquery-ui-bootstrap/0.5pre/assets/css/bootstrap.min.css'>
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<h1>Find Your Spirit Animal!</h1>
-<label for="name">Enter your name:</label>
-<input type="text" id="name" placeholder="Your Name">
-<button onclick="generateSpiritAnimal()">Generate</button>
-<div id="output"></div>
-<script src="script.js"></script>
-</body>
-<!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js'></script><script  src="scripts/script.js"></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.2/js/bootstrap.min.js'></script>
+  <h1>Find Your Spirit Animal!</h1>
+  <label for="name">Enter your name:</label>
+  <input type="text" id="name" placeholder="Your Name">
+  <button id="generateButton">Generate</button>
+  <div id="output"></div>
 
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/js/bootstrap.bundle.min.js'></script>
+  <script src="script.js"></script>
 </body>
 </html>
